--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Ankit's first webpage</title>
-        <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
        <div><h1><caption>Enter Goku in box and click on submit</caption></h1></div>
