--- a/video.html
+++ b/video.html
@@ -6,6 +6,6 @@
     <title>Loooooooooooooooool</title>
 </head>
 <body>
-    <video src="/assets/WhatsApp Video 2024-09-05 at 6.40.53 PM.mp4" controls autoplay  height="300px"></video>
+    <video src="WhatsApp Video 2024-09-05 at 6.40.53 PM.mp4" controls autoplay  height="300px"></video>
 </body>
 </html>
