--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
        <div><h1><caption>Enter Goku in box and click on submit</caption></h1></div>
-       Enter: <input type="text" placeholder="Type Here"> 
+       Enter: <input type="text" placeholder="Type Here......"> 
        <a href="video.html"><button>SUBMIT</button></a>
        <img src="18577f2a-affe-4b67-8cd8-c8b32bdfc573.jpeg" height="300px" alt="goku">
 <h2>iSCHOOL KI 🆖🤴 DOSTI 10TH 🌚 CLASS 🏫 TAK 💰, UNIVERSITY 🏫 KI 😱🆖🤴 DOSTI FINAL 🙏 YEAR 📅 TAK 💰, OFFICE 🏢🗄📠 KI 🆖🤴 DOSTI RETIREMENT 👴🏻👴🏼 TAK 💰, AUR 🥴 LOVER ❤ KI 🆖🤴 DOSTI SHAADI TAK 💰, BUTT 🍆➡🍑 , HAMARI AAPKI, AAPKI AUR 👩‍🎨 HAMARI DOSTI 30 📅 FARVARY TAK 💰, KYUKI NA ✊ KABHI 30 📅 FARVARY AAYEGI AUR 👩‍🎨 NA 🎵 HAMARI AUR 🥴 AAPKI DOSTI KABHI KHATAM HOGI</h2>
