--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-       <div><h1><caption>Enter Goku in box and click on submit</caption></h1></div>
+       <div><h1 id="title"><caption>Enter Goku in box and click on submit</caption></h1></div>
        Enter: <input type="text" placeholder="Type Here......"> 
        <a href="video.html"><button>SUBMIT</button></a>
        <img src="18577f2a-affe-4b67-8cd8-c8b32bdfc573.jpeg" height="300px" alt="goku"aligh="left">
