--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
        <img src="18577f2a-affe-4b67-8cd8-c8b32bdfc573.jpeg" height="285px" alt="goku"aligh="left"><br>
 Enter: <input type="text" placeholder="Type Here......">
  <a href="video.html"><button>SUBMIT</button></a>
-<h2>iSCHOOL KI 🆖🤴 DOSTI 10TH 🌚 CLASS 🏫 TAK 💰, UNIVERSITY 🏫 KI 😱🆖🤴 DOSTI FINAL 🙏 YEAR 📅 TAK 💰, OFFICE 🏢🗄📠 KI 🆖🤴 DOSTI RETIREMENT 👴🏻👴🏼 TAK 💰, AUR 🥴 LOVER ❤ KI 🆖🤴 DOSTI SHAADI TAK 💰, BUTT 🍆➡🍑 , HAMARI AAPKI, AAPKI AUR 👩‍🎨 HAMARI DOSTI 30 📅 FARVARY TAK 💰, KYUKI NA ✊ KABHI 30 📅 FARVARY AAYEGI AUR 👩‍🎨 NA 🎵 HAMARI AUR 🥴 AAPKI DOSTI KABHI KHATAM HOGI</h2>
+<h2>iSCHOOL KI 🆖🤴 DOSTI 10TH 🌚 CLASS 🏫 TAK 💰, UNIVERSITY 🏫 KI 😱🆖🤴 DOSTI FINAL 🙏 YEAR 📅 TAK 💰, OFFICE 🏢🗄📠 KI 🆖🤴 DOSTI RETIREMENT 👴🏻👴🏼 TAK 💰, AUR 🥴 LOVER ❤ KI 🆖🤴 DOSTI SHAADI TAK 💰, BUTT 🍆➡🍑 , HAMARI AAPKI, AAPKI AUR 👩‍🎨 HAMARI DOSTI 30 📅 FARVARY TAK 💰, KYUKI NA ✊ KABHI 30 📅 FARVARY AAYEGI AUR 👩‍🎨 NA 🎵 HAMARI AUR 🥴 AAPKI DOSTI KABHI KHATAM HOGI</h2><hr>
 <h2>⠀⠀⠀⠀⠀⠀⢀⣤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⢤⣤⣀⣀⡀⠀⠀⠀⠀⠀⠀
 ⠀⠀⠀⠀⢀⡼⠋⠀⣀⠄⡂⠍⣀⣒⣒⠂⠀⠬⠤⠤⠬⠍⠉⠝⠲⣄⡀⠀⠀
 ⠀⠀⠀⢀⡾⠁⠀⠊⢔⠕⠈⣀⣀⡀⠈⠆⠀⠀⠀⡍⠁⠀⠁⢂⠀⠈⣷⠀⠀
