--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
        <div><h1 id="title"><caption>Enter Goku in box and click on submit</caption></h1></div>
        <img src="18577f2a-affe-4b67-8cd8-c8b32bdfc573.jpeg" height="285px" alt="goku"aligh="left"><br>
 Enter: <input type="text" placeholder="Type Here......">
- <a href="video.html"><button>SUBMIT</button></a>
+ <a href="video.html"><button>SUBMIT</button></a><hr> 
 <h2>iSCHOOL KI 🆖🤴 DOSTI 10TH 🌚 CLASS 🏫 TAK 💰, UNIVERSITY 🏫 KI 😱🆖🤴 DOSTI FINAL 🙏 YEAR 📅 TAK 💰, OFFICE 🏢🗄📠 KI 🆖🤴 DOSTI RETIREMENT 👴🏻👴🏼 TAK 💰, AUR 🥴 LOVER ❤ KI 🆖🤴 DOSTI SHAADI TAK 💰, BUTT 🍆➡🍑 , HAMARI AAPKI, AAPKI AUR 👩‍🎨 HAMARI DOSTI 30 📅 FARVARY TAK 💰, KYUKI NA ✊ KABHI 30 📅 FARVARY AAYEGI AUR 👩‍🎨 NA 🎵 HAMARI AUR 🥴 AAPKI DOSTI KABHI KHATAM HOGI</h2><hr>
 <h2>⠀⠀⠀⠀⠀⠀⢀⣤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⢤⣤⣀⣀⡀⠀⠀⠀⠀⠀⠀
 ⠀⠀⠀⠀⢀⡼⠋⠀⣀⠄⡂⠍⣀⣒⣒⠂⠀⠬⠤⠤⠬⠍⠉⠝⠲⣄⡀⠀⠀
