--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-<pre>                 <big text-align="center">Website is created by Goku</big>    </pre>
+<pre>                 <big text-align: center;>Website is created by Goku</big>    </pre>
        <div><h1 id="title"><caption>Enter Goku in box and click on submit</caption></h1></div>
        <img src="18577f2a-affe-4b67-8cd8-c8b32bdfc573.jpeg" height="285px" alt="goku"aligh="left"><br>
 Enter: <input type="text" placeholder="Type Here......">
