--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <nav><div id="nav"><a href="https://www.instagram.com/ankit_salaria2/" target="_main"><img src="insta.png" height="25px" ></a></nav></div>
 <pre>                 <big id="credit">Website is created by Goku</big>    </pre>
-       <div><h1 id="title"><caption>Enter Goku in box and click on submit</caption></h1></div>
+       <div id="heading"><h1 id="title"><caption>Enter Goku in box and click on submit</caption></h1></div>
        <img src="18577f2a-affe-4b67-8cd8-c8b32bdfc573.jpeg" height="285px" alt="goku"aligh="left"><br>
 Enter: <input type="text" placeholder="Type Here......">
  <a href="video.html"><button>SUBMIT</button></a><hr> 
